# ml-labs

./: CMakeLists.txt  main.cpp
Bayes/: CMakeLists.txt  main.cpp
KNN/: .gitignore  CMakeLists.txt  README.md  main.cpp
linear/: CMakeLists.txt  Main.py  main.cpp  run_asan.sh  run_rel.sh  vec.hpp
linear/assets/: easy 0.txt
linear/plots/: 1.txt.data  2.txt.data  3.txt.data  4.txt.data  5.txt.data  6.txt.data  7.txt.data
linear/simple_tests/: kek.in
